Contact us - gmap alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -1899,7 +1899,7 @@ ul.social_icons li  a i{
 .gmap-area .gmap iframe {
   border-radius: 50%;
   height: 280px;
-  width: 300px;
+  width: 280px;
 }
 
 .gmap{
